fix alignment

--- a/accenture-proto/src/styles/ClientTicketList.css
+++ b/accenture-proto/src/styles/ClientTicketList.css
@@ -67,9 +67,11 @@
 }
 
 .unable-close {
-  padding: 9px 30px;
+  padding: 20px 21px;
   text-align: left;
   font-size: 90%;
+  margin-right: 4%;
+  margin-left: 3%;
 }
 
 .clientStatusArrow {
